# goodauldbooks

./: .dev.env  .docker.local.env  .env  .env.dist  .env.example  .eslintrc.js  .gitignore  .local.dev.env  .local.init-env.no-docker.sh  .php_cs  .prettierrc.json  .prettierrc.toml  .pylintrc  .travis.yml  Gemfile  Makefile  Pipfile  Procfile  README.md  babel.config.js  clevercloud_wsgi.py  composer.json  docker-compose.yml  heroku_wsgi.py  jest.config.js  mypy.ini  next.config.js  package.json  pnpm-lock.yaml  prettier.config.js  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tsconfig.json  tsconfig.ts-node.json  tsnode.tsconfig.json
.circleci/: config.yml
.deploy/: netlify_build_client.sh
.docker/python/: Dockerfile  venv-shell.sh
.docker/rails/: Dockerfile
app/Console/: Kernel.php
app/Exceptions/: Handler.php
app/Http/: Kernel.php
app/Import/: AuthorToImport.php  BookAsset.php  BookToImport.php  GenreToImport.php  LibraryDatabaseBridge.php  ParsedAuthor.php  ParsedBook.php  ParsedBookAuthor.php  ParsedGenre.php
app/Providers/: AppServiceProvider.php  LibraryServiceProvider.php  TelescopeServiceProvider.php
app/models/: application_record.rb  pg_raw_book.rb  pg_temp_db_record.rb
client/: .gitignore  Makefile  index.html  package.json  tsconfig.json  tslint.json  webpack.config.js  webpack.config.scss.js
client/scss/: _mixins.scss  _reset.scss  _typography.scss  _variables.scss  index.scss
client/src/: ActionsDispatcher.ts  ServicesContainer.ts  ServicesLocator.ts  app-bootstrap.ts  app-config.ts  domain.ts  index.tsx  store-init.ts
config/: app.php  auth.php  clockwork.php  credentials.yml.enc  database.php  database.yml  routes.rb  telescope.php
database/migrations/: 2019_06_15_205304_create_books_table.php  2019_06_15_211649_create_authors_table.php  2019_06_16_110431_create_genres_table.php  2019_06_16_204826_create_book_metadata_table.php
database/seeds/: DatabaseSeeder.php
db/: pg_temp_db_schema.rb
db/pg_temp_db_migrate/: 20190914101736_create_pg_raw_books.rb
doc/: HOWTO-ubuntu.md
import/: .gitignore  Makefile  package.json  tsconfig.json
lib/library_import/: structs.rb
lib/tasks/: import_pg_books_from_generated_collection.rake
public/: .gitignore
react-app/: package.json
react-app/src/: App.tsx
resources/js/: app.js
resources/sass/: _global.scss  _layout.scss  app.scss
resources/views/: home.blade.php  welcome.blade.php
routes/: api.php  web.php
server/: .env  .gitignore  Makefile  docker-compose.yml  gutenberg-rsync-excludes.txt  ormconfig.js  package.json  postgrest-api-public.conf  psqlrc  tsconfig.json  tslint.json
server/api/: .gitignore  requirements.txt
server/api-admin/: Makefile  package.json  tslint.json
server/db/: editing.sql
server/pg-rdfs-indexing/: .gitignore  Makefile  docker-compose.yml  requirements-dev.txt  requirements.txt
server/snippets/: misc_metrics.sql
server/src/: services-container.ts
src/: cli.py  domain.ts  server.py
src/core/: messagebus.py
src/domain/: types.ts
src/infra/: redis.py  redis_key.py
src/library_import/: domain.py  pg_import.py  redis.py
src/pages/: _app.js  _app.tsx  index.js  index.tsx
src/project/: asgi.py  (+5 more)
styles/: Home.module.css
tests/: conftest.py
(+384 files in other folders)
