[tool.poetry]
name = "goodauldbooks-fastapi-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Olivier Philippon <olivier@rougemine.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
django-environ = "^0.8.1"
orjson = "^3.6.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.950"
django-stubs = {extras = ["compatible-mypy"], version = "^1.12.0"}
ipython = "^8.4.0"

[tool.black]
line-length = 119
target-version = ['py310']

[tool.isort]
py_version = 310
profile = "black"
line_length = 119
multi_line_output = 3
known_first_party = ["apps"]
combine_as_imports = true

[tool.mypy]
python_version = "3.10"
mypy_path = "src/"
exclude = [
    '^src/project/settings/.*\.py$',
    '^src/apps/[^/]+/migrations/.*\.py$',
]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
# @link https://github.com/typeddjango/django-stubs
django_settings_module = "project.settings.development"

[[tool.mypy.overrides]]
module = "environ"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
